--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>Angualr works</h1>
+<app-header>
+  <h1>Header</h1>
+</app-header>
+<div class="container">
+  <div class="nav">
+    <app-nav></app-nav>
+  </div>
+  <div class="right-nav">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+<app-footer></app-footer>
